--- a/analysis/about.Rmd
+++ b/analysis/about.Rmd
@@ -2,7 +2,7 @@
 title: "About"
 output:
   workflowr::wflow_html:
-    toc: false
+    toc: true
 editor_options:
   chunk_output_type: console
 ---
